tests/ui/consts/const_in_pattern/reject_non_structural.stderr
error: constant of non-structural type `NoDerive` in a pattern
  --> $DIR/reject_non_structural.rs:60:36
   |
LL | struct NoDerive;
   | --------------- `NoDerive` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL |     const ENUM: Derive<NoDerive> = Derive::Some(NoDerive);
   |     ---------------------------- constant defined here
LL |     match Derive::Some(NoDerive) { ENUM => dbg!(ENUM), _ => panic!("whoops"), };
   |                                    ^^^^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/reject_non_structural.rs:32:1
   |
LL | impl PartialEq for NoDerive { fn eq(&self, _: &Self) -> bool { false } }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

